feat(issues): expose task outputs and fix UpdateFields HTTP method
Create, CreateComment, and UpdateFields discarded Jira's REST response and
returned VoidOutput, so downstream tasks couldn't reference the created
issue key/id or comment id. JiraClient/JiraTemplate now return the HTTP
response instead of swallowing it, and each task parses it into a typed
Output (id, key, url, self as applicable).

UpdateFields switched from POST to PUT on /rest/api/2/issue/{issueIdOrKey}:
Jira REST v2's edit-issue endpoint only accepts PUT and returns 204, so the
task's outputs are derived from its own rendered inputs.

baseUrl is no longer mutated by the tasks (previously accumulated the REST
route on every run), fixing a latent bug that broke retries and made a
trailing slash in baseUrl produce a double slash in the request URI.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>