@@ -1,65 +1,71 @@
 package io.kestra.plugin.jira.issues;
 
-import java.io.IOException;
-import java.net.URISyntaxException;
-import java.util.Objects;
-import java.util.concurrent.TimeoutException;
+import java.util.Map;
 
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import com.google.common.collect.ImmutableMap;
+import io.kestra.core.models.property.Property;
+import io.kestra.core.runners.RunContext;
+import io.kestra.core.runners.RunContextFactory;
+import io.kestra.core.utils.IdUtils;
+import io.kestra.core.utils.TestsUtils;
 
-import io.kestra.core.junit.annotations.KestraTest;
-import io.kestra.core.models.executions.Execution;
-import io.kestra.core.queues.QueueException;
-import io.kestra.core.repositories.LocalFlowRepositoryLoader;
-import io.kestra.core.runners.TestRunner;
-import io.kestra.core.runners.TestRunnerUtils;
-import io.kestra.core.tenant.TenantService;
-
-import io.micronaut.context.ApplicationContext;
-import io.micronaut.runtime.server.EmbeddedServer;
 import jakarta.inject.Inject;
 
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.hasSize;
+import static org.hamcrest.Matchers.is;
 
-@KestraTest
-public class UpdateFieldsTest {
-
-    @Inject
-    private ApplicationContext applicationContext;
+class UpdateFieldsTest extends AbstractJiraTest {
 
     @Inject
-    protected TestRunner runner;
+    private RunContextFactory runContextFactory;
 
-    @Inject
-    protected TestRunnerUtils runnerUtils;
+    @Test
+    void updatesFieldsWithPutAndExposesOutputs() throws Exception {
+        UpdateFields task = UpdateFields.builder()
+            .id(IdUtils.create())
+            .type(UpdateFields.class.getName())
+            .baseUrl(getApiBaseUrl())
+            .username(Property.ofValue("user@example.com"))
+            .password(Property.ofValue("token"))
+            .projectKey("PROJ")
+            .issueIdOrKey("TEST-1")
+            .fields(Property.ofValue(Map.of("description", "Updated description")))
+            .build();
 
-    @Inject
-    protected LocalFlowRepositoryLoader repositoryLoader;
+        RunContext runContext = TestsUtils.mockRunContext(runContextFactory, task, Map.of());
+        UpdateFields.Output output = task.run(runContext);
 
-    @BeforeEach
-    protected void init() throws IOException, URISyntaxException {
-        repositoryLoader.load(Objects.requireNonNull(UpdateFieldsTest.class.getClassLoader().getResource("flows")));
-        this.runner.run();
+        assertThat(output.getIssueIdOrKey(), is("TEST-1"));
+        assertThat(output.getUrl(), is(getApiBaseUrl() + "/browse/TEST-1"));
+
+        assertThat(mockController.requests, hasSize(1));
+        JiraMockController.CapturedRequest request = mockController.requests.getFirst();
+        // Jira REST v2 rejects POST on the edit-issue route; only PUT is accepted.
+        assertThat(request.method(), is("PUT"));
+        assertThat(request.path(), is("/rest/api/2/issue/TEST-1"));
+        assertThat(request.body(), containsString("Updated description"));
     }
 
     @Test
-    void flow() throws TimeoutException, QueueException {
-        EmbeddedServer embeddedServer = applicationContext.getBean(EmbeddedServer.class);
-        embeddedServer.start();
+    void supportsBaseUrlWithContextPath() throws Exception {
+        UpdateFields task = UpdateFields.builder()
+            .id(IdUtils.create())
+            .type(UpdateFields.class.getName())
+            .baseUrl(getApiBaseUrl() + "/jira")
+            .accessToken(Property.ofValue("oauth-token"))
+            .projectKey("PROJ")
+            .issueIdOrKey("TEST-1")
+            .fields(Property.ofValue(Map.of("summary", "Updated summary")))
+            .build();
 
-        Execution execution = runnerUtils.runOne(
-            TenantService.MAIN_TENANT,
-            "io.kestra.tests",
-            "update-fields-jira",
-            null,
-            (f, e) -> ImmutableMap.of("url", embeddedServer.getURI().toString())
-        );
+        RunContext runContext = TestsUtils.mockRunContext(runContextFactory, task, Map.of());
+        UpdateFields.Output output = task.run(runContext);
 
-        assertThat(execution.getTaskRunList(), hasSize(3));
+        assertThat(output.getUrl(), is(getApiBaseUrl() + "/jira/browse/TEST-1"));
+        assertThat(mockController.requests.getFirst().path(), is("/jira/rest/api/2/issue/TEST-1"));
+        assertThat(mockController.requests.getFirst().method(), is("PUT"));
     }
-
 }
